force-app/main/default/objects/EmployeeCosts__c/EmployeeCosts__c.object-meta.xml
<CustomObject>
    <label>Employee Costs</label>
    <nameField>
        <label>Employee Costs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Costs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>