force-app/main/default/objects/EmployeeCosts__c/fields/TimetrackerFullCostsCHF__c.field-meta.xml
<CustomField>
    <fullName>TimetrackerFullCostsCHF__c</fullName>
    <label>Timetracker - Full Costs (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>