force-app/main/default/objects/EmployeeCosts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TimetrackerStaffCostsHourCHF__c</columns>
    <columns>TimetrackerCostsHourCHF__c</columns>
    <columns>TimetrackerFullCostsCHF__c</columns>
    <columns>TimetrackerBestCaseHourCHF__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>